# zynq-mkbootimage

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: bif.c  bif.h  bootrom.c  mkbootimage.c
